# psf-guard

./: .dockerignore  .gitignore  .mise.toml  ASTROMETRY_QUALITY_PLAN.md  CLAUDE.md  CREATE_IMPORT_PLAN.md  Cargo.toml  DATA_TRANSFER_DESIGN.md  Dockerfile  EXPORT_PLAN.md  MULTI_DB_PLAN.md  README.md  REFACTORING.md  REJECT_ARCHIVE_PLAN.md  SEIZA_INTEGRATION_PLAN.md  build-macos.sh  build-windows.bat  build.rs  docker-compose.yml  package-lock.json  package-macos.sh  package.json  psf-guard.toml.example  rust-toolchain.toml  rustfmt.toml  tauri.bundle-windows.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
.cargo/: audit.toml
.github/: WORKFLOWS.md
.github/workflows/: ci.yml  dependency-review.yml  docker.yml  release.yml  rpm.yml  security-audit.yml
crates/seiza-imgproc/: Cargo.toml
crates/seiza-imgproc/src/: blur.rs  morphology.rs
docs/: ASTROMETRY_QUALITY.md  IMPORTING.md  SATELLITES.md  SCREENING.md  STACKING_PREVIEWS.md  STATISTICAL_GRADING.md  cloud-detection-design.md  integration-test-plan.md
examples/: generate_astrometry_e2e_catalog.rs  generate_astrometry_e2e_stars.rs
nsis/: hooks.nsh
packaging/rpm/: README.md  build-in-podman.sh  psf-guard.spec
packaging/rpm/systemd/: psf-guard-server.conf  psf-guard.service  psf-guard.sysusers
scripts/: build-macos.sh  build-windows.bat  macos-opencv-dylibs.py  macos-opencv-dylibs.sh  make-rpm-sources.sh  package-macos.sh
src/: accord_imaging.rs  acquisition_context.rs  astrometry.rs  astrometry_headers.rs  cli.rs  cli_main.rs  concurrency.rs  config.rs  db.rs  db_registry.rs  directory_tree.rs  grading.rs  hocus_focus_star_detection.rs  image_analysis.rs  lib.rs  main.rs  models.rs  mtf_stretch.rs  nina_star_detection.rs  photometry.rs  satellites.rs  sequence_analysis.rs  spatial_analysis.rs  star_contours.rs  tauri_main.rs  test_star_detection.rs  trail_alignment.rs  ts_schema.rs
src/commands/: analyze_fits.rs  annotate_stars.rs  annotate_stars_common.rs  filter_rejected.rs  mod.rs  read_fits.rs  reject_archive.rs  screen_annotate.rs  screen_fits.rs  show_images.rs  stretch_to_png.rs  sync.rs  visualize_psf_multi_common.rs
src/commands/export/: mod.rs
src/commands/import/: grouping.rs  headers.rs  mod.rs
src/commands/sync/: grades.rs  mod.rs  planning.rs  pull.rs
src/commands/visualize_psf/: star_selection.rs
src/server/: api.rs  cache.rs  catalog_install.rs  database_context.rs  embedded_static.rs  extract.rs  handlers.rs  import_job.rs  mod.rs  preview_queue.rs  quality_backfill.rs  remote_upload.rs  scheduler.rs  slug.rs  spatial_scan.rs  stack_preview.rs  state.rs  static_file_service.rs  sync_preview.rs
src/server/stack_preview/: color.rs  stretch.rs
src/ts_schema/: README.md
src/ts_schema/migrate/: 19.sql  20.sql  21.sql  22.sql  23.sql
static/: README.md  UI_README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
static/e2e/: add-database.spec.ts  astrometry-capabilities.spec.ts  data-transfer.spec.ts  empty-state.spec.ts  global-setup.ts  helpers.ts  image-astrometry.spec.ts  image-detail.spec.ts  navigation.spec.ts  overview.spec.ts  preview-generation.spec.ts  stack-preview.spec.ts
static/e2e/fixtures/: README.md  astrometry.ts  loader.ts  manifest.json  objects.bin.gz.b64  stars.bin.gz.b64
static/icons/: icon.icns
static/src/: App.css  App.tsx  main.tsx
static/src/__fixtures__/: image-quality-context.json  sequence-analysis-clouds.json  sequence-analysis-empty.json  sequence-analysis-multi-session.json  sequence-analysis-normal.json
static/src/api/: client.ts  types.ts
static/src/components/: AggregatedCacheStatus.tsx  AstrometryOverlay.tsx  AstrometryPanel.tsx  CacheRefreshStatus.css  CacheRefreshStatus.tsx  ComparisonView.tsx  DetailView.tsx  Dialog.tsx  FilterControls.tsx  GridView.tsx  GroupedImageGrid.tsx  ImageCard.tsx  ImageComparisonView.tsx  ImageDetailView.tsx  ImageFileLocation.tsx  ImageGrid.tsx  (+30 more)
tests/: integration_astrometry_capabilities.rs  integration_db_crud.rs  integration_import.rs  integration_reject_archive.rs  integration_remote_upload.rs  integration_sequence_analysis.rs  integration_spatial_scan.rs  integration_sync_api.rs
(+47 files in other folders)
