[package]
name = "psf-guard"
version = "0.5.0"
edition = "2024"
# With two bins (psf-guard = GUI/CLI smart binary, psf-guard-cli = console-only
# CLI), name the default so `cargo run` and tauri-cli pick the app binary, not
# the sidecar. Without this Tauri bundled psf-guard-cli as the app (WiX ICE30 on
# Windows; a broken GUI elsewhere).
default-run = "psf-guard"
rust-version = "1.89.0"
authors = ["Yann Ramin <github@theatr.us>"]
description = "PSF Guard: Astronomical image analysis and quality assessment tool for N.I.N.A. and FITS files"
license = "Apache-2.0"
repository = "https://github.com/theatrus/psf-guard"
homepage = "https://github.com/theatrus/psf-guard"
readme = "README.md"
keywords = ["astronomy", "telescope", "imaging", "analysis", "nina"]
categories = ["command-line-utilities", "science"]
[lib]
name = "psf_guard"
path = "src/lib.rs"


[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml_edit = { version = "0.25", features = ["serde"] }
anyhow = "1.0"
chrono = "0.4"
regex = "1.12"
byteorder = "1.5"
seiza = "0.10.0"
seiza-fits = "=0.1.6"
seiza-satellites = { version = "0.2.0", features = ["serde"] }
bumpalo = { version = "3.20", features = ["collections"] }
image = "0.25"
imageproc = "0.27"
rand = "0.10"
nalgebra = "0.35"
# OpenCV integration for advanced computer vision. Keep the enabled modules
# aligned with the APIs used in src/: the crate's defaults pull in every
# contrib module and can require libraries that a system OpenCV omits.
opencv = { version = "0.99", optional = true, default-features = false, features = ["imgproc", "photo", "ximgproc"] }
# Web server dependencies
axum = { version = "0.8", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Embed static files into binary
include_dir = "0.7"
mime_guess = "2.0"
humantime = "2.3"
tauri = { version = "2.11.1", features = ["custom-protocol"], optional = true }
tauri-plugin-dialog = { version = "2.7.1", optional = true }
dirs = "6.0"
# Platform memory probes for the occlusion-scan worker budget in
# `concurrency` (both already in the tree transitively). Linux uses
# /proc/meminfo and needs no crate.
[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_SystemInformation"] }

[dev-dependencies]
tempfile = "3.27"
http-body-util = "0.1"

[features]
default = ["opencv"]
opencv = ["dep:opencv"]
tauri = ["dep:tauri", "dep:tauri-plugin-dialog"]

[profile.release]
# Enable maximum optimizations for performance
opt-level = 3
# Enable link-time optimization
lto = true
# Set number of codegen units to 1 for better optimization
codegen-units = 1
# Enable panic unwinding to be optimized away in release builds
panic = 'abort'
# Allow aggressive loop optimizations and auto-vectorization
overflow-checks = false

[profile.dev]
# Keep some optimizations in debug builds for reasonable performance during development
opt-level = 1
# Disable overflow checks in dev for performance (be careful with this)
overflow-checks = false

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
