[package]
name = "seiza-imgproc"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Yann Ramin <github@theatr.us>"]
license = "Apache-2.0"
description = "Pure-Rust image processing primitives with OpenCV-compatible semantics: Gaussian/median blur, Canny, Otsu, binary morphology, Suzuki-Abe contours, domain transform filter, and à trous wavelets"
repository = "https://github.com/theatrus/psf-guard"
keywords = ["image-processing", "canny", "contours", "morphology"]
categories = ["computer-vision", "science"]

[dependencies]
